# MingCVManager

./: .vale.ini  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: integration_tests.rs  main.rs  users.rs
src/users/: tests.rs
