[package]
name = "ming_cvman"
version = "0.1.0"
edition = "2024"

[features]
integration = []

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.4", features = ["v7", "serde"] }

[dev-dependencies]
axum-test = "20.0.0"
googletest = "0.14.2"
